# libhypervisor

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Darwin.cmake  Linux.cmake  README.md  Windows.cmake
include/: CMakeLists.txt  hv.h  processor-flags.h  processor_msrs.h  vmm.h  vmm_prot.h
src/: haxm.h  hv.c  hv_Hypervisor.c  hv_kvm.c  list.h  vmm_ahf.c  vmm_kvm.c  vmm_win_haxm.c  vmm_win_haxm.cpp
test/: CMakeLists.txt  boot_longmode.c  boot_realmode.c  main.c  success_if_liblinked.c
